--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,12 +1,14 @@
 footer {
     display: flex;
     gap: 16px;
+    background-color: navy;
 }
 
 .left-footer {
     display: flex;
     flex-direction: column;
     gap: 16px;
+    color: white;
 }
 
 footer img {
@@ -17,6 +19,10 @@ footer img {
     display: flex;
     flex-direction: column;
     gap: 8px;
+}
+
+.contacts svg {
+    fill: white;
 }
 
 .contacts div {
