--- a/styles/my-work.css
+++ b/styles/my-work.css
@@ -14,7 +14,7 @@
 .project-screenshot {
     width: 100%;
     height: calc(9px * 20);
-    background-color: blue;
+    background-color: navy;
     display: flex;
     justify-content: center;
     align-items: center;
