--- a/styles/my-work.css
+++ b/styles/my-work.css
@@ -15,6 +15,7 @@
     width: 100%;
     height: calc(9px * 20);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
