--- a/styles/header.css
+++ b/styles/header.css
@@ -51,3 +51,16 @@ header img{
 header img, .right-header > div {
     box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.25);
 }
+
+body {
+    position: relative;
+}
+
+.header-design {
+    background-color: navy;
+    height: 500px;
+    width: 100vw;
+    position: absolute;
+    z-index: -1;
+    transform: rotateZ(-15deg) translateY(-200px) scale(1.25);
+}
