--- a/styles/footer.css
+++ b/styles/footer.css
@@ -2,6 +2,7 @@ footer {
     display: flex;
     gap: 16px;
     background-color: navy;
+    position: relative;
 }
 
 .left-footer {
@@ -13,6 +14,7 @@ footer {
 
 footer img {
     width: 55%;
+    box-shadow: 2px 2px 6px 0px rgba(255, 255, 255, .5);
 }
 
 .contacts {
@@ -38,4 +40,21 @@ footer img {
 
 .left-footer svg {
     height: 24px;
+}
+
+.footer-extend-left, .footer-extend-right {
+    position: absolute;
+    top: 0; 
+    z-index: -1;
+    background-color: navy;
+    height: 100%;
+    width: 100vw;
+}
+
+.footer-extend-left {
+    left: 0;
+}
+
+.footer-extend-right {
+    right: 0;
 }
