--- a/styles/header.css
+++ b/styles/header.css
@@ -2,15 +2,25 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Rubik', sans-serif;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 header, section, footer {
     padding: 40px;
+    max-width: 1000px;
 }
 
 header {
     display: flex;
     align-items: center;
+    background-color: navy;
+    position: relative;
 }
 
 header img{
@@ -49,18 +59,22 @@ header img{
 }
 
 header img, .right-header > div {
-    box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 2px 2px 6px 0px rgba(255, 255, 255, .5);
 }
 
-body {
-    position: relative;
-}
-
-.header-design {
-    background-color: navy;
-    height: 500px;
-    width: 100vw;
+.header-extend-left, .header-extend-right {
     position: absolute;
+    top: 0; 
     z-index: -1;
-    transform: rotateZ(-15deg) translateY(-200px) scale(1.25);
+    background-color: navy;
+    height: 100%;
+    width: 100vw;
+}
+
+.header-extend-left {
+    left: 0;
+}
+
+.header-extend-right {
+    right: 0;
 }
