--- a/styles/my-work.css
+++ b/styles/my-work.css
@@ -8,7 +8,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.5);
+    background-color: white;
 }
 
 .project-screenshot {
