--- a/styles/desktop/footer.css
+++ b/styles/desktop/footer.css
@@ -3,6 +3,7 @@ footer {
     gap: 16px;
     background-color: navy;
     position: relative;
+    justify-content: space-between;
 }
 
 .left-footer {
@@ -13,7 +14,7 @@ footer {
 }
 
 footer img {
-    width: 55%;
+    width: 40%;
     box-shadow: 2px 2px 6px 0px rgba(255, 255, 255, .5);
 }
 
