--- a/styles/desktop/my-work.css
+++ b/styles/desktop/my-work.css
@@ -14,7 +14,7 @@
 
 .project-screenshot {
     width: 100%;
-    height: calc(9px * 20);
+    height: 333px;
     display: flex;
     flex-direction: column;
     justify-content: center;
