--- a/styles/desktop/header.css
+++ b/styles/desktop/header.css
@@ -3,13 +3,25 @@
     margin: 0;
     padding: 0;
     font-family: 'Rubik', sans-serif;
-    font-size: 1.2rem;
+    font-size: 1.15rem;
 }
 
 body {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+h1 {
+    font-size: 1.75rem;
+}
+
+h2 {
+    font-size: 1.5rem;
+}
+
+h3 {
+    font-size: 1.25rem;
 }
 
 header, section, footer {
@@ -56,7 +68,7 @@ header img{
 }
 
 .header-icons svg {
-    height: 24px;
+    height: 32px;
 }
 
 header img, .right-header > div {
