--- a/styles/desktop/my-work.css
+++ b/styles/desktop/my-work.css
@@ -58,6 +58,7 @@
 .project-description div {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     gap: 10px;
 }
 
@@ -66,5 +67,5 @@
 }
 
 .icons svg {
-    height: 20px;
+    height: 32px;
 }
