--- a/styles/desktop/header.css
+++ b/styles/desktop/header.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Rubik', sans-serif;
+    font-family: 'Playfair Display', serif;
     font-size: 1.15rem;
 }
 
