--- a/styles/header.css
+++ b/styles/header.css
@@ -40,17 +40,12 @@ header img{
     max-height: 415px;
 }
 
-.left-header {
-    position: relative;
-}
-
-.left-header p {
+header > p {
     color: white;
     font-size: 32px;
     position: absolute;
-    bottom: 8px;
-    width: 100%;
-    text-align: center;
+    bottom: 45px;
+    left: 47.5px;
 }
 
 .right-header > div {
@@ -90,4 +85,16 @@ header img, .right-header > div {
 
 .header-extend-right {
     right: 0;
+}
+
+@media (max-width: 768px) {
+    h1 {
+        font-size: 1.5rem;
+        text-align: center;
+    }
+
+    .header-icons svg{
+        display: none;
+    }
+
 }
