--- a/styles/header.css
+++ b/styles/header.css
@@ -6,6 +6,10 @@
     font-size: 1.15rem;
 }
 
+html,body {
+    overflow-x: hidden;
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -14,14 +18,6 @@ body {
 
 h1 {
     font-size: 1.75rem;
-}
-
-h2 {
-    font-size: 1.5rem;
-}
-
-h3 {
-    font-size: 1.25rem;
 }
 
 header, section, footer {
@@ -88,13 +84,34 @@ header img, .right-header > div {
 }
 
 @media (max-width: 768px) {
+    * {
+        font-size: 1rem;
+    }
+
     h1 {
         font-size: 1.5rem;
-        text-align: center;
+    }
+
+    header, section, footer {
+        padding: 32px;
+    }
+
+    header img {
+        height: 300px;
+    }
+
+    header > p {
+        font-size: 22px;
+        bottom: 35px;
+        left: 42.5px;
+    }
+
+    .right-header > div {
+        padding: 12px;
+        gap: 12px;
     }
 
     .header-icons svg{
         display: none;
     }
-
 }
