--- a/styles/footer.css
+++ b/styles/footer.css
@@ -89,3 +89,31 @@ footer img {
         height: 24px;
     }
 }
+
+@media (max-width: 425px) {
+    footer {
+        flex-direction: column;
+    }
+
+    footer h2 {
+        text-align: center;
+        font-size: 32px;
+    }
+
+    .footer-icons {
+        justify-content: center;
+    }
+
+    .left-footer svg {
+        height: 36px;
+    }
+
+    picture {
+        display: flex;
+        justify-content: center;
+    }
+
+    footer img {
+        max-width: 100%;
+    }
+}
