--- a/styles/my-work.css
+++ b/styles/my-work.css
@@ -120,3 +120,10 @@ h3 {
         height: 24px;
     }
 }
+
+@media (max-width: 425px) {
+    .projects {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 24px;
+    }
+}
