--- a/styles/header.css
+++ b/styles/header.css
@@ -21,8 +21,9 @@ h1 {
 }
 
 header, section, footer {
-    padding: 40px;
+    padding: 32px;
     max-width: 1366px;
+    width: 100%;
 }
 
 header {
@@ -97,7 +98,7 @@ header img, .right-header > div {
     }
 
     header, section, footer {
-        padding: 32px;
+        padding: 24px;
     }
 
     header img {
@@ -124,27 +125,27 @@ header img, .right-header > div {
     }
     
     header, section, footer {
-        padding: 24px;
+        padding: 8px;
     }
 
     header {
         flex-direction: column;
-        gap: 24px;
+        gap: 8px;
     }
 
-    picture {
+    .left-header {
         width: 100%;
     }
 
     header img {
         width: 100%;
         height: 100%;
-        min-width: 257px;
         max-height: 540px;
     }
 
     .left-header p {
-        font-size: 30px;
+        font-size: 40px;
+        right: 50%;
     }
 
     .right-header > div {
