--- a/styles/header.css
+++ b/styles/header.css
@@ -16,6 +16,16 @@ body {
     align-items: center;
 }
 
+
+button {
+    border: none;
+    background-color: inherit;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2px;
+}
+
 h1 {
     font-size: 1.75rem;
 }
@@ -25,6 +35,7 @@ header, section, footer {
     max-width: 1366px;
     width: 100%;
 }
+
 
 header {
     display: flex;
